# army-simple-fc

./: .gitignore  README.md  generate-gerbers.sh  makefile  platformio.ini
board/revision-1/: #auto_saved_files#  army-simple-fc.kicad_pcb  army-simple-fc.kicad_prl  army-simple-fc.kicad_pro  army-simple-fc.kicad_sch
board/revision-1/docs/: BOM.xls  army-simple-fc.txt  dc-motor-driver-adapter.txt  ibom.html
board/revision-1/footprints/: JST_PH_B3B-PH-K_1x03_P2.00mm_Vertical.kicad_mod  TC2030-MCP.kicad_mod
boards/: generic_stm32g070kbt.json
lib/crsf/: crsf.c  crsf.h  crsf_protocol.h
src/: army-simple-fc.ino  main.cpp
zephyrproject/.west/: config
zephyrproject/army-simple-fc/: CMakeLists.txt  Kconfig  prj.conf-hide  sample.yaml  west.yml
zephyrproject/army-simple-fc/app/: CMakeLists.txt  Kconfig  prj.conf
zephyrproject/army-simple-fc/app/src/: CMakeLists.txt
zephyrproject/army-simple-fc/boards/dropla/army_simple_fc_v1_0/: Kconfig.board  Kconfig.defconfig  army_simple_fc_v1_0.dts  army_simple_fc_v1_0.yaml  board.cmake  board.yml
zephyrproject/army-simple-fc/boards/dropla/army_simple_fc_v1_0/doc/: index.rst
zephyrproject/army-simple-fc/zephyr/: module.yml
